--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lexical/clipboard": "^0.33.1",
+    "@lexical/code": "^0.33.1",
+    "@lexical/headless": "^0.33.1",
+    "@lexical/link": "^0.33.1",
+    "@lexical/list": "^0.33.1",
+    "@lexical/markdown": "^0.33.1",
+    "@lexical/react": "^0.33.1",
+    "@lexical/rich-text": "^0.33.1",
+    "@lexical/utils": "^0.33.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@tiptap/pm": "^3.0.9",
+    "babel-polyfill": "^6.26.0",
+    "firebase": "^12.0.0",
+    "framer-motion": "^12.23.12",
+    "lexical": "^0.33.1",
+    "lucide-react": "^0.536.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
