--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "type": "module",
   "main": "index.js",
- "scripts": {
-  "dev": "nodemon api/index.js",
-  "start": "node api/index.js",
-  "build": "npm run build --prefix client",
-  "postinstall": "npm install && npm install --prefix client"
-},
+  "scripts": {
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/likhith1072/Mini-LinkedIn.git"
